# staking-module-core

./: .env.exemplo  .gitignore  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml
.github/workflows/: docker-publish.yml
manifests/: deployment.yaml  service.yaml
resources/codefresh/: cf-gitops-runtime.yaml  staking-core-git.yaml
resources/codefresh/chart/: Chart.yaml  values.yaml
resources/control-planes/sealed-secrets/: sealed-secrets-keydmckn-codefresh.sealing-key.yaml  sealed-secrets-keydxh8w-codefresh.sealing-key.yaml  sealed-secrets-keymrjjr-codefresh.sealing-key.yaml
runtimes/codefresh/: in-cluster.yaml
src/: config.rs  main.rs
src/db/: database.rs
src/dto/: staking.rs
src/handlers/: mod.rs  stake.rs  unstake.rs
src/health/: health.rs  mod.rs
src/models/: models.rs
src/redis_client/: mod.rs  redis_client.rs
src/routers/: routers.rs
src/services/: ethereum.rs
