[package]
name = "staking-module-core"
version = "0.1.0"
edition = "2024"
authors = ["Gilly Lopes <gillylopes@gmail.com>"]
description = "Staking service core with REST API, Ethereum integration, MongoDB and Redis"
license = "MIT"

[dependencies]
actix-web = "4"
dotenv = "0.15"
env_logger = "0.10"
ethers = { version = "2" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.7", features = ["tokio-runtime"] }
redis = { version = "0.24", features = ["tokio-comp"] }
log = "0.4"
uuid = { version = "1", features = ["v4"] }

# Segurança futura (opcional, comente se ainda não usar)
argon2 = "0.5"
jsonwebtoken = "9"
validator = "0.16"

[profile.release]
opt-level = "z"
lto = true
